Added a diagram for a single photon (used as a symbol).
Change-Id: Idf92a66d775a1bcb5a0fa0a3c83cc6b34743b989

--- a/images/diagrams/makefile
+++ b/images/diagrams/makefile
@@ -16,6 +16,7 @@ all:
 	make F=Charged_Fermion_Energy_2b
 	make F=Photon_Energy_2a
 	make F=Photon_Energy_2b
+	make F=Photon
 
 clean:
 	rm Coulomb_Scattering.ps
@@ -24,4 +25,5 @@ clean:
 	rm Charged_Fermion_Energy_2b.ps
 	rm Photon_Energy_2a.ps
 	rm Photon_Energy_2b.ps
+	rm Photon.ps
 
